[package]
name = "kona-p2p"
version = "0.1.0"
description = "P2P library for the OP Stack"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Kona
kona-macros.workspace = true
kona-genesis.workspace = true

# Alloy
alloy-rlp.workspace = true
alloy-primitives = { workspace = true, features = ["k256", "getrandom"] }
alloy-rpc-types-engine.workspace = true
alloy-consensus.workspace = true

# Op Alloy
op-alloy-consensus = { workspace = true, features = ["k256"] }
op-alloy-rpc-types-engine = { workspace = true, features = ["std"] }

# Networking
snap.workspace = true
futures.workspace = true
discv5 = { workspace = true, features = ["libp2p"] }
libp2p-identity = { workspace = true, features = ["secp256k1"] }
libp2p = { workspace = true, features = ["macros", "tokio", "tcp", "noise", "gossipsub", "ping", "yamux", "identify"] }
openssl = { workspace = true, features = ["vendored"] }

# Cryptography
secp256k1.workspace = true

# Misc
url.workspace = true
dirs.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
unsigned-varint.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
serde_json = { workspace = true, features = ["alloc"] }
backon = { workspace = true, features = ["std", "tokio", "tokio-sleep"] }
derive_more = { workspace = true, features = ["display", "deref", "debug"] }

# `arbitrary` feature dependencies
arbitrary = { workspace = true, features = ["derive"], optional = true }

# `metrics` feature
metrics = { workspace = true, optional = true }

[dev-dependencies]
arbtest.workspace = true
tempfile.workspace = true
kona-cli.workspace = true
multihash.workspace = true
alloy-eips.workspace = true

rand = { workspace = true, features = ["thread_rng"] }
arbitrary = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["arbitrary"] }
alloy-rpc-types-engine = { workspace = true, features = ["std"] }
alloy-consensus = { workspace = true, features = ["arbitrary", "k256"] }
op-alloy-consensus = { workspace = true, features = ["arbitrary", "k256"] }

[features]
default = []
metrics = ["dep:metrics", "libp2p/metrics"]
arbitrary = ["dep:arbitrary", "alloy-primitives/arbitrary"]
