[package]
name = "kona-rpc"
version = "0.2.0"
description = "Optimism RPC Types and API"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-protocol.workspace = true
kona-p2p = {workspace = true, optional = true}
kona-macros = {workspace = true, optional = true}

# OP Alloy
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Alloy
alloy-eips = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }

# Misc
thiserror.workspace = true
derive_more = { workspace = true, default-features = false, features = [
    "display",
    "from",
    "constructor"
] }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["time"] }

# `serde`
serde = { workspace = true, optional = true }

# `jsonrpsee`
jsonrpsee = { workspace = true, optional = true, features = ["macros", "server"] }
getrandom = { workspace = true, optional = true, features = ["wasm_js"] } # req for wasm32-unknown-unknown
kona-genesis = { workspace = true, optional = true }
op-alloy-rpc-jsonrpsee = { workspace = true, optional = true }

# `reqwest` feature
alloy-rpc-client = { workspace = true, features = ["reqwest"], optional = true }

# `interop` feature
kona-interop = { workspace = true, features = ["serde"], optional = true }

# `metrics` feature
metrics = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
std = [
    "dep:jsonrpsee",
    "dep:kona-p2p",
    "dep:kona-macros",
    "dep:tokio",
    "dep:async-trait",
    "jsonrpsee/server",
    "kona-protocol/std",
    "kona-genesis?/std",
    "alloy-eips/std",
    "alloy-primitives/std",
    "op-alloy-rpc-types-engine/std",
    "derive_more/std",
    "serde?/std",
]
serde = [
    "dep:serde",
    "kona-protocol/serde",
    "kona-genesis?/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "op-alloy-rpc-types-engine/serde",
    "kona-interop?/serde"
]
jsonrpsee = [
    "serde",
    "dep:kona-genesis",
    "dep:kona-p2p",
    "dep:kona-interop",
    "dep:jsonrpsee",
    "dep:getrandom",
    "dep:op-alloy-rpc-jsonrpsee",
]
reqwest = ["dep:alloy-rpc-client"]
client = [
    "dep:jsonrpsee",
    "dep:kona-interop",
    "jsonrpsee/client",
    "jsonrpsee/async-client",
    "op-alloy-rpc-jsonrpsee/client",
]
interop = [
    "client",
    "jsonrpsee",
    "dep:kona-interop",
    "dep:async-trait",
    "dep:tokio"
]
metrics = ["dep:metrics"]
