[package]
name = "kona-node-service"
description = "An implementation of the OP Stack consensus node service"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
kona-p2p.workspace = true
kona-engine.workspace = true
kona-genesis.workspace = true
kona-derive.workspace = true
kona-protocol.workspace = true
kona-providers-alloy.workspace = true
kona-rpc = { workspace = true, features = ["std"] }

# alloy
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
alloy-provider.workspace = true
alloy-eips.workspace = true
alloy-transport.workspace = true

# op-alloy
op-alloy-network.workspace = true
op-alloy-rpc-types-engine = { workspace = true, features = ["std"] }

# general
url.workspace = true
libp2p.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
