[package]
name = "kona-node-service"
description = "An implementation of the OP Stack consensus node service"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
kona-rpc.workspace = true
kona-p2p.workspace = true
kona-disc.workspace = true
kona-gossip.workspace = true
kona-engine.workspace = true
kona-sources.workspace = true
kona-genesis.workspace = true
kona-derive.workspace = true
kona-protocol.workspace = true
kona-providers-alloy.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
alloy-provider.workspace = true
alloy-eips.workspace = true
alloy-transport.workspace = true
alloy-transport-http = { workspace = true, features = ["reqwest", "hyper", "jwt-auth"] }

# op-alloy
op-alloy-network.workspace = true
op-alloy-rpc-types-engine = { workspace = true, features = ["std"] }
op-alloy-provider.workspace = true

# general
discv5.workspace = true
url.workspace = true
libp2p.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
derive_more = { workspace = true, features = ["debug"] }
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower.workspace = true
http-body-util.workspace = true

[features]
default = []
metrics = []
