[package]
name = "kona-node-service"
description = "An implementation of the OP Stack consensus node service"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
kona-p2p.workspace = true
kona-engine.workspace = true
kona-sources.workspace = true
kona-genesis.workspace = true
kona-interop.workspace = true
kona-derive.workspace = true
kona-protocol.workspace = true
kona-providers-alloy.workspace = true
kona-rpc.workspace = true
kona-peers.workspace = true
kona-macros.workspace = true

# alloy
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-primitives.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-rustls-tls", "hyper", "hyper-tls"] }
alloy-eips.workspace = true
alloy-transport.workspace = true
alloy-transport-http = { workspace = true, features = ["reqwest", "reqwest-rustls-tls", "hyper", "hyper-tls", "jwt-auth"] }

# op-alloy
op-alloy-network.workspace = true
op-alloy-rpc-types-engine = { workspace = true, features = ["std"] }
op-alloy-provider.workspace = true

# general
url.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
discv5.workspace = true
futures.workspace = true
ethereum_ssz.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
strum = { workspace = true, features = ["derive"] }
backon.workspace = true
derive_more = { workspace = true, features = ["debug"] }
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower.workspace = true
http-body-util.workspace = true

# metrics
metrics = { workspace = true, optional = true }

[features]
default = []
metrics = [
	"dep:metrics",
	"kona-derive/metrics",
	"kona-engine/metrics",
	"kona-p2p/metrics",
	"kona-rpc/metrics",
	"kona-sources/metrics",
	"libp2p/metrics",
]
