[package]
name = "kona-sources"
version = "0.1.0"
description = "Data source types and utilities for the kona-node"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-rpc.workspace = true
kona-derive.workspace = true
kona-genesis.workspace = true
kona-protocol.workspace = true
kona-providers-alloy.workspace = true

# Alloy
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true

# Misc
url.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
kona-cli.workspace = true
kona-registry.workspace = true
