[package]
name = "kona-sources"
version = "0.1.0"
description = "Data source types and utilities for the kona-node"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-derive.workspace = true
kona-genesis.workspace = true
kona-protocol.workspace = true
kona-providers-alloy.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-default-tls", "hyper", "hyper-tls"] }
alloy-transport.workspace = true
alloy-primitives.workspace = true

# OP Alloy
op-alloy-rpc-types-engine = { workspace = true, features = ["std"] }
op-alloy-network.workspace = true

# Misc
lru.workspace = true
url.workspace = true
tracing.workspace = true
thiserror.workspace = true

# `metrics` feature
metrics = { workspace = true, optional = true }

[features]
default = []
metrics = ["dep:metrics"]

[dev-dependencies]
tokio.workspace = true
kona-cli.workspace = true
kona-registry.workspace = true
serde_json.workspace = true
alloy-rpc-types = { workspace = true, features = ["eth"] }
