[package]
name = "kona-executor"
description = "A no_std stateless block builder for the OP Stack"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-mpt.workspace = true
kona-genesis = { workspace = true, features = ["revm"] }

# Alloy
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true

# Op Alloy
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine = { workspace = true, features = ["serde", "k256"] }
alloy-op-hardforks.workspace = true

# revm
op-revm.workspace = true
revm.workspace = true

# alloy-evm
alloy-evm.workspace = true
alloy-op-evm.workspace = true

# General
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
rstest.workspace = true
kona-registry.workspace = true
rocksdb = { workspace = true, features = ["snappy"] }
tempfile.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rlp.workspace = true
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rpc-client.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
