[package]
name = "kona-genesis"
version = "0.3.0"
description = "Optimism genesis types"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-hardforks.workspace = true
alloy-op-hardforks.workspace = true

# Misc
thiserror.workspace = true
derive_more = { workspace = true, features = ["from"] }

# `revm` feature
op-revm = { workspace = true, optional = true }

# `arbitrary` feature
arbitrary = { workspace = true, features = ["derive"], optional = true }

# `serde` feature
serde = { workspace = true, optional = true }
serde_repr = { workspace = true, optional = true }
kona-serde = { workspace = true, optional = true }

[dev-dependencies]
toml = { workspace = true, features = ["parse"] }
rand = { workspace = true, features = ["thread_rng"] }
serde_json.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["rand", "arbitrary"] }

[features]
default = []
revm = ["dep:op-revm"]
std = [
    "alloy-primitives/std",
    "alloy-sol-types/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "kona-serde?/std",
    "serde?/std",
    "thiserror/std"
]
arbitrary = [
    "std",
    "dep:arbitrary",
    "alloy-consensus/arbitrary",
    "alloy-eips/arbitrary",
    "alloy-primitives/rand",
    "alloy-primitives/arbitrary",
]
serde = [
    "dep:serde",
    "dep:serde_repr",
    "dep:kona-serde",
    "alloy-primitives/serde",
    "alloy-eips/serde",
    "alloy-consensus/serde",
]
