[package]
name = "kona-providers-alloy"
version = "0.3.1"
description = "Alloy Backed Providers"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Kona
kona-genesis.workspace = true
kona-protocol.workspace = true
kona-derive.workspace = true
kona-macros.workspace = true

# Alloy
alloy-serde.workspace = true
alloy-eips = { workspace = true, features = ["kzg"] }
alloy-transport.workspace = true
alloy-transport-http = { workspace = true, features = ["reqwest", "reqwest-rustls-tls", "hyper", "hyper-tls", "jwt-auth"] }
alloy-consensus.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-client.workspace = true
alloy-provider = { workspace = true, features = ["ipc", "ws", "reqwest"] }
alloy-primitives = { workspace = true, features = ["map"] }

# Op Alloy
op-alloy-consensus.workspace = true
op-alloy-network.workspace = true

# Misc
lru.workspace = true
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, features = ["json"] }
tower.workspace = true
http-body-util.workspace = true

# Metrics (optional)
metrics = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true

[features]
default = []
metrics = ["dep:metrics"]
