[package]
name = "kona-providers-local"
version = "0.1.0"
description = "Local providers for kona"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Kona
kona-derive.workspace = true
kona-genesis.workspace = true
kona-protocol.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives = { workspace = true, features = ["map"] }

# Op Alloy
op-alloy-consensus.workspace = true

# Reth
reth-execution-types.workspace = true
reth-ethereum-primitives.workspace = true

# Misc
async-trait.workspace = true
parking_lot.workspace = true
derive_more = { workspace = true, features = ["full"] }
