[package]
name = "kona-providers-local"
version = "0.1.0"
description = "Local buffered provider for caching and reorg handling"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Kona
kona-derive.workspace = true
kona-genesis.workspace = true
kona-protocol.workspace = true

# Alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true

# Op Alloy
op-alloy-consensus.workspace = true
op-alloy-network.workspace = true

# Standard library
async-trait.workspace = true
lru.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
default = []
