[package]
name = "kona-supervisor-core"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
# workspace
kona-interop.workspace = true
kona-protocol.workspace = true
kona-supervisor-types.workspace = true
kona-supervisor-rpc = { workspace = true, features = ["jsonrpsee", "client"] }
kona-supervisor-storage.workspace = true

# alloy
alloy-eips.workspace = true
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }

# op-alloy
op-alloy-rpc-types.workspace = true

# jsonrpsee
jsonrpsee = { workspace = true, features = [ "macros", "server", "client", "ws-client" ] }

# general
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true 
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-util.workspace = true

# `metrics` feature
metrics = { workspace = true }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
kona-interop = {workspace = true, features = ["std", "test-utils"]}

# op-alloy
op-alloy-consensus.workspace = true



[lints]
workspace = true
