[package]
name = "kona-supervisor-rpc"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lints]
workspace = true

[features]
# The `jsonrpsee` feature enables the core RPC functionality.
# When it's active, we also need the `serde` feature from `kona-interop`
# for serializing/deserializing RPC message types.
jsonrpsee = ["dep:jsonrpsee", "kona-interop/serde"]
client = ["jsonrpsee", "jsonrpsee/client"] # Client feature builds upon the base jsonrpsee feature

[dependencies]
# Workspace
kona-interop.workspace = true
kona-supervisor-types.workspace = true

# jsonrpsee
jsonrpsee = { workspace = true, optional = true, features = ["macros", "server"] }

# Alloy
alloy-eips.workspace = true
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }
