[package]
name = "kona-supervisor-rpc"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
kona-interop.workspace = true
kona-protocol.workspace = true
kona-supervisor-types.workspace = true

# jsonrpsee
serde.workspace = true
serde_json.workspace = true
jsonrpsee = { workspace = true, optional = true, features = ["macros", "server"] }

# Alloy
alloy-eips.workspace = true
alloy-serde.workspace = true
alloy-primitives = { workspace = true, features = ["map", "rlp", "serde"] }
op-alloy-consensus.workspace = true

[features]
serde = [
	"alloy-eips/serde",
	"alloy-primitives/serde",
	"kona-interop/serde",
	"kona-protocol/serde",
	"op-alloy-consensus/serde",
]
# The `jsonrpsee` feature enables the core RPC functionality.
# When it's active, we also need the `serde` feature.
jsonrpsee = [ "dep:jsonrpsee", "serde" ]
# Client feature builds upon the base jsonrpsee feature
client = [ "jsonrpsee", "jsonrpsee/client" ]
