[package]
name = "kona-supervisor-service"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
# Workspace dependencies
kona-supervisor-core = { workspace = true }
kona-supervisor-rpc = { workspace = true, features = ["jsonrpsee"] }

# External dependencies
jsonrpsee = { workspace = true, features = ["macros", "server"] }
anyhow = { workspace = true }
tracing = { workspace = true}